--- a/index.html
+++ b/index.html
@@ -1346,9 +1346,9 @@
                           ><span class="dotx"></span> Planned</span
                         >
                       </div>
-                      <div class="ttl">AI compiler</div>
+                      <div class="ttl">YouTube transcript scraper</div>
                       <ul>
-                        <li>Convert key conversations into notes</li>
+                        <li>Make sending and analyzing trancripts easier with LLMs.</li>
                       </ul>
                     </div>
                   </div>
