--- a/index.html
+++ b/index.html
@@ -1301,36 +1301,37 @@
                           ><span class="dotx"></span> In progress</span
                         >
                       </div>
-                      <div class="ttl">Spring '26 Button Themes, Adding Claude + DeepSeek</div>
+                      <div class="ttl">Expand</div>
                       <ul>
                         <li>
-                          Cherry Blossom, Fresh Mint, Lemon Zest, Lavender
-                          Fields and animated Rainy Fields.
+                          Coming to Edge, Brave, Safari, Arc, Opera, Mozilla
                         </li>
                         <li>
-                          New LLMs!
+                          Desktop app
+                        </li>
+                        <li>
+                          Mobile Companion
                         </li>
                       </ul>
                     </div>
 
                     <div class="log">
                       <div class="row">
-                        <div class="date">Soon</div>
+                        <div class="date">Future</div>
                         <span class="tag-chip tag-planned"
                           ><span class="dotx"></span> Planned</span
                         >
                       </div>
-                      <div class="ttl">Tab Functionality</div>
+                      <div class="ttl">Workflow platform</div>
                       <ul>
-                        <li>First rollout for tab functions.</li>
                         <li>
-                          Every tab will automatically be archived, converted,
-                          saved or closed.
+                          Marketplace for users collaborate and share workflows.
                         </li>
                         <li>
-                          No more highlighting entire pages. Click the tab and
-                          send it to LLMs to summarize or save it to another
-                          destination.
+                          Cloud integration
+                        </li>
+                        <li>
+                          Developer API
                         </li>
                         <li>
                           Focus Mode: Tabs will fade after certain period of
