--- a/index.html
+++ b/index.html
@@ -1347,9 +1347,9 @@
                           ><span class="dotx"></span> Planned</span
                         >
                       </div>
-                      <div class="ttl">YouTube transcript scraper</div>
+                      <div class="ttl">Add more destinations</div>
                       <ul>
-                        <li>Make sending and analyzing trancripts easier with LLMs.</li>
+                        <li>Perplexity, Kimi, Zai, Grok, & more.</li>
                       </ul>
                     </div>
                   </div>
