--- a/index.html
+++ b/index.html
@@ -473,6 +473,147 @@
         margin-top: 14px;
       }
 
+      .destinations-panel {
+        margin: 14px 0 0;
+        border-radius: 18px;
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        background: linear-gradient(
+          180deg,
+          rgba(255, 255, 255, 0.06),
+          rgba(255, 255, 255, 0.025)
+        );
+        box-shadow: 0 18px 55px rgba(0, 0, 0, 0.28);
+        overflow: hidden;
+      }
+      .destinations-panel.compact {
+        margin-top: 14px;
+      }
+      .destinations-panel.compact .destinations-panel-head {
+        display: none;
+      }
+      .destinations-panel-head {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 10px;
+        padding: 12px 14px 10px;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.06);
+      }
+      .destinations-panel-head .label {
+        font-size: 12px;
+        font-weight: 1000;
+        letter-spacing: 0.08em;
+        text-transform: uppercase;
+        color: rgba(238, 240, 255, 0.82);
+      }
+      .destinations-panel-head .note {
+        font-size: 11px;
+        font-weight: 800;
+        color: rgba(238, 240, 255, 0.58);
+      }
+
+      .dest-marquee {
+        position: relative;
+        overflow: hidden;
+        padding: 10px 0;
+      }
+      .dest-marquee + .dest-marquee {
+        border-top: 1px solid rgba(255, 255, 255, 0.04);
+        background: rgba(5, 5, 18, 0.12);
+      }
+      .dest-marquee::before,
+      .dest-marquee::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 34px;
+        z-index: 1;
+        pointer-events: none;
+      }
+      .dest-marquee::before {
+        left: 0;
+        background: linear-gradient(90deg, rgba(7, 7, 23, 0.95), transparent);
+      }
+      .dest-marquee::after {
+        right: 0;
+        background: linear-gradient(270deg, rgba(7, 7, 23, 0.95), transparent);
+      }
+
+      .dest-track {
+        display: flex;
+        align-items: center;
+        width: max-content;
+        gap: 10px;
+        padding: 0 10px;
+        animation: destScroll 26s linear infinite;
+        will-change: transform;
+      }
+      .dest-track.reverse {
+        animation-direction: reverse;
+        animation-duration: 30s;
+      }
+      .dest-marquee:hover .dest-track {
+        animation-play-state: paused;
+      }
+
+      .dest-chip {
+        display: inline-flex;
+        align-items: center;
+        gap: 8px;
+        padding: 8px 12px;
+        border-radius: 999px;
+        border: 1px solid rgba(255, 255, 255, 0.12);
+        background: rgba(255, 255, 255, 0.04);
+        color: rgba(238, 240, 255, 0.88);
+        font-size: 13px;
+        font-weight: 900;
+        white-space: nowrap;
+      }
+      .dest-chip .dot {
+        width: 7px;
+        height: 7px;
+        border-radius: 999px;
+        cursor: default;
+        border: 0;
+        background: linear-gradient(180deg, var(--cyan), var(--violet));
+        box-shadow: 0 0 14px rgba(34, 211, 238, 0.35);
+      }
+      .dest-chip.coming {
+        color: rgba(238, 240, 255, 0.74);
+        border-color: rgba(255, 255, 255, 0.08);
+        background: rgba(255, 255, 255, 0.03);
+      }
+      .dest-chip.coming .dot {
+        background: linear-gradient(180deg, var(--pink), #f59e0b);
+        box-shadow: 0 0 14px rgba(251, 113, 133, 0.3);
+      }
+      .dest-chip .state {
+        font-size: 10px;
+        letter-spacing: 0.06em;
+        text-transform: uppercase;
+        font-weight: 1000;
+        padding: 3px 6px;
+        border-radius: 999px;
+        border: 1px solid rgba(255, 255, 255, 0.08);
+        color: rgba(238, 240, 255, 0.6);
+        background: rgba(255, 255, 255, 0.03);
+      }
+      .dest-clone {
+        display: inline-flex;
+        align-items: center;
+        gap: 10px;
+      }
+
+      @keyframes destScroll {
+        from {
+          transform: translateX(0);
+        }
+        to {
+          transform: translateX(calc(-50% - 5px));
+        }
+      }
+
       .mini-row {
         margin-top: 14px;
         display: flex;
@@ -972,6 +1113,17 @@
           width: 100%;
         }
 
+        .destinations-panel-head {
+          align-items: flex-start;
+          flex-direction: column;
+          gap: 6px;
+        }
+
+        .dest-marquee::before,
+        .dest-marquee::after {
+          width: 20px;
+        }
+
         section {
           padding: 36px 0;
         }
@@ -1031,6 +1183,20 @@
           animation: none !important;
           transition: none !important;
           scroll-behavior: auto !important;
+        }
+        .dest-marquee {
+          overflow-x: auto;
+          padding-bottom: 12px;
+        }
+        .dest-marquee::before,
+        .dest-marquee::after {
+          display: none;
+        }
+        .dest-track {
+          width: max-content;
+        }
+        .dest-clone {
+          display: none;
         }
       }
 
@@ -1197,6 +1363,120 @@
                 Route highlights directly into ChatGPT, Gemini, Notion, Slack,
                 Google Docs, email, and more.
               </p>
+            </div>
+          </div>
+
+          <div
+            class="destinations-panel compact reveal"
+            aria-label="Courier Web destinations"
+          >
+            <div class="destinations-panel-head">
+              <div class="label">Destinations (Live + Next)</div>
+              <div class="note">All in one line</div>
+            </div>
+
+            <div class="dest-marquee" aria-label="All destinations">
+              <div class="dest-track" role="list">
+                <span class="dest-chip" role="listitem"
+                  ><span class="dot" aria-hidden="true"></span>ChatGPT
+                  <span class="state">Live</span></span
+                >
+                <span class="dest-chip" role="listitem"
+                  ><span class="dot" aria-hidden="true"></span>Gemini
+                  <span class="state">Live</span></span
+                >
+                <span class="dest-chip" role="listitem"
+                  ><span class="dot" aria-hidden="true"></span>Claude
+                  <span class="state">Live</span></span
+                >
+                <span class="dest-chip" role="listitem"
+                  ><span class="dot" aria-hidden="true"></span>DeepSeek
+                  <span class="state">Live</span></span
+                >
+                <span class="dest-chip" role="listitem"
+                  ><span class="dot" aria-hidden="true"></span>Notion
+                  <span class="state">Live</span></span
+                >
+                <span class="dest-chip" role="listitem"
+                  ><span class="dot" aria-hidden="true"></span>Slack
+                  <span class="state">Live</span></span
+                >
+                <span class="dest-chip" role="listitem"
+                  ><span class="dot" aria-hidden="true"></span>Google Docs
+                  <span class="state">Live</span></span
+                >
+                <span class="dest-chip" role="listitem"
+                  ><span class="dot" aria-hidden="true"></span>Email
+                  <span class="state">Live</span></span
+                >
+                <span class="dest-chip coming" role="listitem"
+                  ><span class="dot" aria-hidden="true"></span>Perplexity
+                  <span class="state">Next</span></span
+                >
+                <span class="dest-chip coming" role="listitem"
+                  ><span class="dot" aria-hidden="true"></span>Kimi
+                  <span class="state">Next</span></span
+                >
+                <span class="dest-chip coming" role="listitem"
+                  ><span class="dot" aria-hidden="true"></span>Zai
+                  <span class="state">Next</span></span
+                >
+                <span class="dest-chip coming" role="listitem"
+                  ><span class="dot" aria-hidden="true"></span>Grok
+                  <span class="state">Next</span></span
+                >
+
+                <div class="dest-clone" aria-hidden="true">
+                  <span class="dest-chip"
+                    ><span class="dot"></span>ChatGPT
+                    <span class="state">Live</span></span
+                  >
+                  <span class="dest-chip"
+                    ><span class="dot"></span>Gemini
+                    <span class="state">Live</span></span
+                  >
+                  <span class="dest-chip"
+                    ><span class="dot"></span>Claude
+                    <span class="state">Live</span></span
+                  >
+                  <span class="dest-chip"
+                    ><span class="dot"></span>DeepSeek
+                    <span class="state">Live</span></span
+                  >
+                  <span class="dest-chip"
+                    ><span class="dot"></span>Notion
+                    <span class="state">Live</span></span
+                  >
+                  <span class="dest-chip"
+                    ><span class="dot"></span>Slack
+                    <span class="state">Live</span></span
+                  >
+                  <span class="dest-chip"
+                    ><span class="dot"></span>Google Docs
+                    <span class="state">Live</span></span
+                  >
+                  <span class="dest-chip"
+                    ><span class="dot"></span>Email
+                    <span class="state">Live</span></span
+                  >
+                  <span class="dest-chip coming"
+                    ><span class="dot"></span>Perplexity
+                    <span class="state">Next</span></span
+                  >
+                  <span class="dest-chip coming"
+                    ><span class="dot"></span>Kimi
+                    <span class="state">Next</span></span
+                  >
+                  <span class="dest-chip coming"
+                    ><span class="dot"></span>Zai
+                    <span class="state">Next</span></span
+                  >
+                  <span class="dest-chip coming"
+                    ><span class="dot"></span>Grok
+                    <span class="state">Next</span></span
+                  >
+                </div>
+              </div>
             </div>
           </div>
         </div>
